Fixed navigation level 3 on mobile

--- a/src/stylesheets/components/_navigation.scss
+++ b/src/stylesheets/components/_navigation.scss
@@ -294,8 +294,19 @@
 
       .overflow-list{
         .overflow-list {
-          a {
-            border-top: 0;
+          margin-left: 16px;
+          li {
+            a {
+
+              border-top: 0;
+              padding: 8px 0 8px 0;
+            }
+            &:first-of-type a {
+              padding: 0px 0 8px 0;
+            }
+            &:last-of-type a {
+              padding: 8px 0 32px 0;
+            }
           }
         }
 
